<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/me"
    android:focusableInTouchMode="true"
    android:paddingTop="70dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/passwordTextInput">

        <EditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edit_text"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textStyle="bold"
            tools:ignore="Autofill" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:background="@drawable/edit_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textStyle="bold"
            tools:ignore="Autofill" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/llLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordTextInput"
        android:gravity="center_horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_rectangle"
            android:onClick="LogIn"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dhay"
            android:textAlignment="center" />

        <Button
            android:id="@+id/signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_rectangle"
            android:text="@string/signup"
            android:textColor="#FFFFFF"
            android:onClick="changeIntent"/>

    </LinearLayout>

</RelativeLayout>