<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/me">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/nameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <EditText
                    android:id="@+id/fnText"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text"
                    android:inputType="textPersonName"
                    android:hint="@string/first_name"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/lnText"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    tools:ignore="Autofill" />
            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameLayout"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <EditText

                    android:id="@+id/emailText"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/edit_text"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    tools:ignore="Autofill" />
            </android.support.design.widget.TextInputLayout>

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/emailTextInput"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                tools:ignore="Autofill" />

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_rectangle"
                android:layout_below="@id/passwordText"
                android:layout_margin="20dp"
                android:layout_centerHorizontal="true"
                android:text="@string/signup"
                android:onClick="signup"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="20sp"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>